# x-pilo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  train_yolo.py  vercel.json
.github/workflows/: ci.yml  staging-deploy.yml
api/: index.py
configs/: mission.yaml
docs/: task-flow.mmd
ros2_nodes/: README.md  detector_bridge_node.py  mission_orchestrator_node.py
scripts/: bootstrap.ps1  setup_staging_secret.ps1
src/otonom/: __init__.py  actuator.py  api.py  classifier.py  config.py  detector.py  drone_bridge.py  geometry_io.py  georef.py  inference.py  main.py  mission.py  models.py  persistence.py  planner.py  safety.py  schemas.py  service.py
src/otonom/web/: app.js  index.html  style.css
tests/: test_api.py  test_geometry_api.py  test_image_detection_api.py  test_mission.py  test_parcelize_api.py
training/: AGRI_LABELING_GUIDE.md  README.md  requirements.txt
training/config/: dataset.yaml
training/reports/: latest_eval.md
training/scripts/: label_qc.py  train_yolo.py  tune_thresholds.py
